--- a/public/content.html
+++ b/public/content.html
@@ -96,7 +96,14 @@
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input type="search" class="form-control" placeholder="Search" ng-model="ctrl.query.search" ng-model-options="{debounce: 500}">
+                    <div class="input-group">
+                        <input type="search" class="form-control" placeholder="Search" ng-model="ctrl.query.search" ng-model-options="{debounce: 500}">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="ctrl.query.search = null">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </button>
+                        </span>
+                    </div>
                 </div>
                 <div class="form-group">
                     <select class="form-control" ng-model="ctrl.sorting" ng-options="s.value as s.name for s in ctrl.sortOptions"></select>
