--- a/public/list-view.html
+++ b/public/list-view.html
@@ -10,7 +10,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.currently_playing">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in currentlyPlaying = (ctrl.gameService.games | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)"
+                   ng-repeat="game in currentlyPlaying = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -34,7 +34,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.suggestions">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in suggestions = (ctrl.gameService.games | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
+                   ng-repeat="game in suggestions = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -57,7 +57,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.queue">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in queue = (ctrl.gameService.games | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')"
+                   ng-repeat="game in queue = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -80,7 +80,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.all_games">
                 <a class="list-group-item hand overflow-ellipsis" id="game{{game.id}}"
-                   ng-repeat="game in ctrl.filtered = (ctrl.gameService.games | search:ctrl.query | orderBy:ctrl.sorting)"
+                   ng-repeat="game in ctrl.filtered = (ctrl.gameService.getVisibleGames() | search:ctrl.query | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="panel-body">
                     <dl class="dl-horizontal">
-                        <dt style="width: 100px;">{{ctrl.gameService.games.length}}</dt>
+                        <dt style="width: 100px;">{{ctrl.gameService.getVisibleGames().length}}</dt>
                         <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
                         <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
                         <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
