npm/bower/gulp/cdn

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
     <title>g_</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="components/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dark-style.css" rel="stylesheet" ng-if="globalOptions.darkStyle">
-    <link href="css/loading-bar.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="full-height">
@@ -20,29 +20,12 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
-    <script src="js/Chart.min.js"></script>
-    <script src="js/moment.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/loading-bar.min.js"></script>
-    <script src="js/angular-upload.min.js"></script>
-    <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
-    <script src="js/app.min.js"></script>
-    <script src="js/controllers/form.min.js"></script>
-    <script src="js/controllers/games.min.js"></script>
-    <script src="js/controllers/link.min.js"></script>
-    <script src="js/controllers/loginForm.min.js"></script>
-    <script src="js/controllers/manageForm.min.js"></script>
-    <script src="js/controllers/queueForm.min.js"></script>
-    <script src="js/controllers/global.min.js"></script>
-    <script src="js/directives/bindElement.min.js"></script>
-    <script src="js/directives/game.min.js"></script>
-    <script src="js/directives/statsPanel.min.js"></script>
-    <script src="js/directives/validators.min.js"></script>
-    <script src="js/factories/factories.min.js"></script>
-    <script src="js/factories/Games.min.js"></script>
-    <script src="js/factories/Users.min.js"></script>
-    <script src="js/filters/offset.min.js"></script>
-    <script src="js/filters/search.min.js"></script>
-    <script src="js/services/gameService.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="components/Chart.js/Chart.min.js"></script>
+    <script src="components/moment/min/moment.min.js"></script>
+    <script src="components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="components/angular-upload/angular-upload.min.js"></script>
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="js/g.min.js"></script>
 </body>
 </html>
