--- a/public/grid-view.html
+++ b/public/grid-view.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="row" collapse="ctrl.sections.currently_playing">
-        <div class="col-lg-4" ng-repeat="game in currentlyPlaying = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)">
+        <div class="col-lg-4" ng-repeat="game in currentlyPlaying = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
                   edit-callback="ctrl.editClick(game)">
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="row" collapse="ctrl.sections.suggestions">
-        <div class="col-lg-4" ng-repeat="game in suggestions = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)">
+        <div class="col-lg-4" ng-repeat="game in suggestions = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
                   edit-callback="ctrl.editClick(game)">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="row" collapse="ctrl.sections.queue">
-        <div class="col-lg-4" ng-repeat="game in queue = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')">
+        <div class="col-lg-4" ng-repeat="game in queue = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
                   edit-callback="ctrl.editClick(game)">
@@ -93,7 +93,7 @@
                         class="game-pagination">
             </pagination>
         </div>
-        <div class="col-lg-4" ng-repeat="game in ctrl.filtered = (ctrl.gameService.getVisibleGames() | search:ctrl.query | orderBy:ctrl.sorting) | offset:ctrl.offset | limitTo:ctrl.itemsPerPage" id="game{{game.id}}">
+        <div class="col-lg-4" ng-repeat="game in ctrl.filtered = (ctrl.gameService.getOwnedGames() | search:ctrl.query | orderBy:ctrl.sorting) | offset:ctrl.offset | limitTo:ctrl.itemsPerPage" id="game{{game.id}}">
             <game game="game"
                   link-callback="ctrl.openLinkDialog(game)"
                   edit-callback="ctrl.editClick(game)">
@@ -113,6 +113,26 @@
                         ng-model="ctrl.currentPage"
                         class="game-pagination">
             </pagination>
+        </div>
+    </div>
+</div>
+<div ng-show="wishlist.length > 0">
+    <div class="row text-center">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 ng-click="ctrl.collapseSection('wishlist')" class="hand">
+                    <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.wishlist ? 'right' : 'down'}}"></span>
+                    Wishlist
+                </h1>
+            </div>
+        </div>
+    </div>
+    <div class="row" collapse="ctrl.sections.wishlist">
+        <div class="col-lg-4" ng-repeat="game in wishlist = (ctrl.gameService.getWishlistGames() | search:ctrl.query | orderBy:'wishlist_position')">
+            <game game="game"
+                  link-callback="ctrl.openLinkDialog(game)"
+                  edit-callback="ctrl.editClick(game)">
+            </game>
         </div>
     </div>
 </div>
@@ -137,7 +157,7 @@
             </div>
             <div class="panel-body">
                 <dl class="dl-horizontal">
-                    <dt style="width: 100px;">{{ctrl.gameService.getVisibleGames().length}}</dt>
+                    <dt style="width: 100px;">{{ctrl.gameService.getOwnedGames().length}}</dt>
                     <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
                     <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
                     <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
