--- a/public/game.html
+++ b/public/game.html
@@ -47,7 +47,7 @@
             </span><br>
             <rating ng-model="game.rating" max="5" readonly="true" ng-if="game.hasRating()"></rating>
             <br>
-            <strong ng-if="game.tag_ids.length > 0" ng-repeat="t in getTags()" title="{{t.name != t.short_name ? t.name : ''}}">
+            <strong ng-if="game.tag_ids.length > 0" ng-repeat="t in getTags() | orderBy:'short_name'" title="{{t.name != t.short_name ? t.name : ''}}">
                 {{t.short_name}}<span ng-if="!$last">, </span>
             </strong>
             <p ng-if="game.comment">
