--- a/public/list-view.html
+++ b/public/list-view.html
@@ -10,7 +10,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.currently_playing">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in currentlyPlaying = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)"
+                   ng-repeat="game in currentlyPlaying = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{currently_playing: true} | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -34,7 +34,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.suggestions">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in suggestions = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
+                   ng-repeat="game in suggestions = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:ctrl.isInSuggestions | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -57,7 +57,7 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.queue">
                 <a class="list-group-item hand overflow-ellipsis"
-                   ng-repeat="game in queue = (ctrl.gameService.getVisibleGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')"
+                   ng-repeat="game in queue = (ctrl.gameService.getOwnedGames() | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:'queue_position')"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
                     <div class="pull-right">
@@ -80,9 +80,32 @@
             </h1>
             <div class="list-group" collapse="ctrl.sections.all_games">
                 <a class="list-group-item hand overflow-ellipsis" id="game{{game.id}}"
-                   ng-repeat="game in ctrl.filtered = (ctrl.gameService.getVisibleGames() | search:ctrl.query | orderBy:ctrl.sorting)"
+                   ng-repeat="game in ctrl.filtered = (ctrl.gameService.getOwnedGames() | search:ctrl.query | orderBy:ctrl.sorting)"
                    ng-click="ctrl.gameSelected(game)"
                    ng-class="{active: game == ctrl.selectedGame, 'list-group-item-success': game.finished == ctrl.gameService.FINISHED}">
+                    <div class="pull-right">
+                        <span ng-style="{visibility: game.year ? 'visible' : 'hidden'}">({{game.year}})</span>
+                        <span class="glyphicon glyphicon-time" ng-style="{visibility: game.hasPlaytime() ? 'visible' : 'hidden'}"></span>
+                        <span ng-style="{visibility: game.hasRating() ? 'visible' : 'hidden'}">
+                            <span class="glyphicon glyphicon-star"></span>{{game.rating || 0}}
+                        </span>
+                    </div>
+                    <div class="overflow-ellipsis">
+                        {{game.title}}
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div ng-show="wishlist.length > 0">
+            <h1 class="text-center hand" ng-click="ctrl.collapseSection('wishlist')">
+                <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.wishlist ? 'right' : 'down'}}"></span>
+                Wishlist
+            </h1>
+            <div class="list-group" collapse="ctrl.sections.wishlist">
+                <a class="list-group-item hand overflow-ellipsis"
+                   ng-repeat="game in wishlist = (ctrl.gameService.getWishlistGames() | search:ctrl.query | orderBy:'wishlist_position')"
+                   ng-click="ctrl.gameSelected(game)"
+                   ng-class="{active: game == ctrl.selectedGame}">
                     <div class="pull-right">
                         <span ng-style="{visibility: game.year ? 'visible' : 'hidden'}">({{game.year}})</span>
                         <span class="glyphicon glyphicon-time" ng-style="{visibility: game.hasPlaytime() ? 'visible' : 'hidden'}"></span>
@@ -121,7 +144,7 @@
                 </div>
                 <div class="panel-body">
                     <dl class="dl-horizontal">
-                        <dt style="width: 100px;">{{ctrl.gameService.getVisibleGames().length}}</dt>
+                        <dt style="width: 100px;">{{ctrl.gameService.getOwnedGames().length}}</dt>
                         <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
                         <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
                         <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
