--- a/public/game.html
+++ b/public/game.html
@@ -15,9 +15,11 @@
     <div class="panel-body media game-panel-body" ng-style="heightStyle">
         <div class="pull-left game-cover-container">
             <img class="media-object game-cover img-rounded" ng-if="game.image" ng-src="{{game.decachedImage}}" alt="Game cover">
-            <p ng-if="!game.image">
-                No cover image
-            </p>
+            <div class="panel panel-default" ng-if="!game.image">
+                <div class="panel-body text-center">
+                    No cover image
+                </div>
+            </div>
         </div>
         <div class="media-body game-info">
             <div class="overflow-ellipsis">
