server side validation, better json types, client side error handling in dialogs

--- a/public/manage.html
+++ b/public/manage.html
@@ -9,6 +9,13 @@
 <form name="form">
     <div class="modal-body">
         <div class="container-fluid">
+            <div class="row" ng-if="error">
+                <div class="col-md-12">
+                    <alert type="danger" close="closeAlert()">
+                        {{error}}
+                    </alert>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-6">
                     <label>Name</label>
