--- a/public/form.html
+++ b/public/form.html
@@ -8,6 +8,13 @@
 <form name="form">
     <div class="modal-body">
         <div class="container-fluid">
+            <div class="row" ng-if="error">
+                <div class="col-md-12">
+                    <alert type="danger" close="closeAlert()">
+                        {{error}}
+                    </alert>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-4">
                     <h4>Details</h4>
